# cs336-assignment5-alignment

./: .gitignore  expri.toml  pyproject.toml
cs336_alignment/: drgrpo_grader.py  vllm_utils.py
cs336_alignment/inference/: data.py
cs336_alignment/rl/: config.py  fixtures.py  grpo.py  jobs.py  memory.py  models.py  prompts.py  train.py  utils.py
scripts/: analyze_rollouts.py  evaluate_baseline.py  jobs.py  make.py  remote.py  setup-runpod.sh  train.py  tune.py
tests/: adapters.py
